# resolve

./: .dockerignore  .dvcignore  .env.template  .gitignore  CHANGELOG.md  CPUC Template.pptx  E3 Model Template.xlsm  README.md  RESOLVE Results Viewer.xlsm  RESOLVE_3_Training_User_Interface.xlsm  RESOLVE_3_User_Interface_Template.xlsm  Recap-Resolve Scenario Tool.xlsm  bump-version.sh  data.dvc  docker.environment.yml  environment-ci.yml  environment-dev.yml  environment.base.yml  environment.jupyter.yml  environment.workflow.yml  environment.yml  pyproject.toml  renovate.json  requirements.txt  resolve.yml
.github/workflows/: testing.yml
docs/: Makefile  test_docs.py
docs/source/: branding.md  (+26 more)
kit/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  environment-dev.yml  environment.yml  pyproject.toml
kit/.devcontainer/: Dockerfile  devcontainer.json
kit/.devcontainer/scripts/: on_create.sh  post_attach.sh  post_create.sh
kit/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
kit/.github/workflows/: build-dev-environment.yml  build-image.yml  bump-version.yml  pre-commit.yml  public-release.yml  test-resolve.yml  unit-testing.yml
kit/deploy/manifests/: kustomization.yaml
kit/deploy/manifests/infrastructure/argo/: argo-charts.yaml  argo-workflows.yaml  kustomization.yaml
kit/docker/: Dockerfile
kit/docs/: test_docs.py
kit/docs/source/: conf.py  modules.md  new_modeling_toolkit.core.rst  new_modeling_toolkit.resolve.refactor.md  new_modeling_toolkit.resolve.rst  new_modeling_toolkit.rst  new_modeling_toolkit.system.buildings.rst  new_modeling_toolkit.visualization.rst  tests.core.md  tests.core.utils.md  tests.md  tests.recap.md  tests.system.electric.resources.md  tests.system.md
kit/docs/source/_templates/: page.html
kit/docs/source/core/temporal/: clustering.md
kit/docs/source/recap/: faqs.md  nitty_gritty.md  toy_model.md
kit/docs/source/system/buildings/: index.md
kit/docs/source/system/electric/: index.md  tx_paths.md
kit/docs/source/system/electric/resources/: index.md
kit/docs/source/system/fuels/: electrolytic.md
kit/docs/source/system/misc/: index.md
kit/docs/source/ui/: index.md
kit/new_modeling_toolkit/cli/: new.py
kit/new_modeling_toolkit/common/: system.py  temporal.py
kit/new_modeling_toolkit/common/asset/: asset.py
kit/new_modeling_toolkit/core/: __init__.py  linkage.py
kit/new_modeling_toolkit/core/temporal/: timeseries.py
kit/new_modeling_toolkit/core/utils/: core_utils.py
kit/new_modeling_toolkit/recap/: dispatch_model.py  monte_carlo_draw.py  recap2_wrapper.py  recap_analyzer.py  recap_case.py  recap_case_settings.py  run_model.py  scenario_tool.py
kit/new_modeling_toolkit/system/: outage_distribution.py  policy.py  sector.py
kit/new_modeling_toolkit/system/electric/: elcc.py  reserve.py  zone.py
kit/new_modeling_toolkit/system/electric/resources/: __init__.py  hybrid.py  hydro.py  shed_dr.py  unit_commitment.py
kit/new_modeling_toolkit/system/fuel/: candidate_fuel.py  conversion_plant.py  storage.py
kit/new_modeling_toolkit/ui/: get_system.py
kit/notebooks/: cluster.ipynb  cluster.py  resolve-runner.py
kit/tests/common/: test_fuel.py  test_load_component.py  test_resource.py
kit/tests/core/utils/: test_core_utils.py  test_gurobi_utils.py  test_pandas_utils.py  test_parallelization_utils.py  test_pyomo_utils.py
kit/tests/system/electric/resources/: test_generic.py  test_hybrid.py  test_hydro.py  test_storage.py  test_variable.py
new_modeling_toolkit/: __init__.py
notebooks/: RECAP Analytical Tool (Oct 2023).py  RESOLVE production simulation dispatch.py  RESOLVE_Annual_RV_Creation.py  RESOLVE_Hourly_Results_Viewer.py  Representative_Day_Sampling.py  cloudrunner.py  repday_synthetic_year_emd_demo.py  results_viewer.py
tests/: conftest.py
(+352 files in other folders)
