[project]
name="new-modeling-toolkit"
description="E3's New Modeling Toolkit"
version="3.5.2"
authors=[
    { name = "Energy and Environmental Economics, Inc." }
]
requires-python = ">=3.10"

dynamic = [ "dependencies" ]

[project.optional-dependencies]
jupyter = [
    "bokeh >= 3.1.0",
    "ipywidgets==8.1.3",
    "openpyxl==3.1.5",
    "jupyterlab==3.6.7",
    "jupytext==1.16.2",
]
ui = [
    "ipyfilechooser==0.6.0",
    "python-pptx==0.6.23",
    "streamlit==1.35.0",
]
dev = [
    "autodoc_pydantic==2.2.0",
    "commitizen==3.25.0",
    "darker==1.7.3",
    "furo==2023.9.10",
    "graphviz==0.20.3",
    "line-profiler==4.1.3",
    "memory-profiler==0.61.0",
    "myst-parser==2.0.0",
    "pre-commit==3.7.1",
    "pylint==3.3.5",
    "pytest==7.4.4",
    "pytest-sugar==0.9.7",
    "pytest-xdist[psutil]==3.6.1",
    "sphinx==7.2.6",
    "sphinxawesome-theme==5.1.4",
    "sphinxcontrib-mermaid==0.9.2",
    "sphinx-autobuild==2024.4.16",
    "sphinx-design==0.5.0",
    "sphinx-last-updated-by-git==0.3.7",
    "sphinx-copybutton==0.5.1",
]

[project.scripts]
nmt = "new_modeling_toolkit.cli:main"
kit-ui = "new_modeling_toolkit.cli.new:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["new_modeling_toolkit*"]

[tool.setuptools.package-data]
"new_modeling_toolkit.common" = ["units.csv"]
"new_modeling_toolkit.ui" = ["runTerminalCommand-0.24.0.applescript"]

[tool.black]
line_length = 120

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = false

[tool.setuptools.dynamic]
dependencies = { file = [ "requirements.txt" ] }
